--- a/fujifilm/index.html
+++ b/fujifilm/index.html
@@ -17,31 +17,31 @@
                 <nav class="nav">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#" target="_blank" class="nav__link">Акции</a>
+                            <a href="https://myfujifilm.ru/pormo/" target="_blank" class="nav__link">Акции</a>
                         </li>
                         <li class="nav__item">
                             <a href="https://myfujifilm.ru/events/" target="_blank" class="nav__link">Мероприятия</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" target="_blank" class="nav__link">Тест-Драйв</a>
+                            <a href="https://myfujifilm.ru/testdrive/" target="_blank" class="nav__link">Тест-Драйв</a>
                         </li>
                         <li class="nav__item">
                             <a href="https://www.fujifilm.eu/ru/produkty/avtorizovannye-dilery-serii-kh" target="_blank" class="nav__link">Где купить</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" target="_blank" class="nav__link">Обучение</a>
+                            <a href="https://myfujifilm.ru/school/" target="_blank" class="nav__link">Обучение</a>
                         </li>
                         <li class="nav__item">
                             <a href="https://myfujifilm.ru/fps/" target="_blank" class="nav__link">FPS</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#" target="_blank" class="nav__link">FAQ</a>
+                            <a href="https://myfujifilm.ru/faq/" target="_blank" class="nav__link">FAQ</a>
                         </li>
                     </ul>
                 </nav>
                 <div class="header__buttons">
-                    <a href="#" class="button button_response">Обратная связь</a>
-                    <a href="#" class="button button_login">Вход</a>
+                    <a href="https://myfujifilm.ru/feedback/" class="button button_response">Обратная связь</a>
+                    <a href="https://myfujifilm.ru/login/" class="button button_login">Вход</a>
                 </div>
                 <button class="button burger js-burger">
                     <span></span>
@@ -105,39 +105,27 @@
                 <path d="M508.875,248.458l-160-160c-4.167-4.167-10.917-4.167-15.083,0c-4.167,4.167-4.167,10.917,0,15.083l141.792,141.792   H10.667C4.771,245.333,0,250.104,0,256s4.771,10.667,10.667,10.667h464.917L333.792,408.458c-4.167,4.167-4.167,10.917,0,15.083   c2.083,2.083,4.813,3.125,7.542,3.125c2.729,0,5.458-1.042,7.542-3.125l160-160C513.042,259.375,513.042,252.625,508.875,248.458z   "/>
             </svg>
             <a href="#pro" class="aside__link js-scroll-link">
-                <span class="aside__text">Профессиональная камера</span>
+                <span class="aside__text">Универсальная камера</span>
                 <span class="aside__bullet"></span>
             </a>
-            <a href="#hybrid" class="aside__link js-scroll-link">
-                <span class="aside__text">Fujifilm X-S10 — Настоящий Гибрид</span>
-                <span class="aside__bullet"></span>
-            </a>
-            <a href="#control" class="aside__link js-scroll-link">
-                <span class="aside__text">Полный контроль</span>
+            <a href="#top-slider" class="aside__link js-scroll-link">
+                <span class="aside__text">18 профилей пленки</span>
                 <span class="aside__bullet"></span>
             </a>
             <a href="#video" class="aside__link js-scroll-link">
-                <span class="aside__text">Видеосъемка — от блога к кино</span>
-                <span class="aside__bullet"></span>
-            </a>
-            <a href="#autofocus" class="aside__link js-scroll-link">
-                <span class="aside__text">Флагманский автофокус</span>
+                <span class="aside__text">Видеосъемка</span>
                 <span class="aside__bullet"></span>
             </a>
             <a href="#corpus" class="aside__link js-scroll-link">
-                <span class="aside__text">Корпус — магниевый, легкий и прочный</span>
+                <span class="aside__text">Корпус</span>
                 <span class="aside__bullet"></span>
             </a>
-            <a href="#whatsin" class="aside__link js-scroll-link">
-                <span class="aside__text">Что внутри?</span>
+            <a href="#stab" class="aside__link js-scroll-link">
+                <span class="aside__text">Матричная стабилизация</span>
                 <span class="aside__bullet"></span>
             </a>
             <a href="#lens" class="aside__link js-scroll-link">
-                <span class="aside__text">Сменные объективы</span>
-                <span class="aside__bullet"></span>
-            </a>
-            <a href="#connection" class="aside__link js-scroll-link">
-                <span class="aside__text">Подключение</span>
+                <span class="aside__text">Оптика</span>
                 <span class="aside__bullet"></span>
             </a>
             <a href="#compare" class="aside__link js-scroll-link">
@@ -219,7 +207,7 @@
                 <div class="hero__container">
                     <img  src="./img/x-s10-logo.png" alt="Лого X-S10" class="hero__logo">
                     <span class="section__title hero__agit">Ваш стиль <br>наш цвет</span>
-                    <h1 class="hero__title">Универсальная камера <br> для фото и видеосъемки</h1>
+                    <h1 class="hero__title">Универсальная камера <br> для фото- и видеосъемки</h1>
                     <span class="section__subtitle hero__price">
                         Рекомендованная розничная цена <br>
                         от <span class="hero__price-num">85 999 </span><span class="hero__price-rub">₽</span>
@@ -240,14 +228,14 @@
                         <div class="hero__socials">
                             <span class="hero__socials-label">наши соц. сети</span>
                             <div class="hero__socials-row">
-                                <a href="https://vk.com/club23327078" target="_blank" class="hero__socials-link">
-                                    <svg height="20" width="30">
-                                        <use height="20" width="30" xlink:href="./img/icons.svg#vk-stroke"></use>
-                                    </svg>
-                                </a>
                                 <a href="https://www.instagram.com/fujifilmru/" target="_blank" class="hero__socials-link">
                                     <svg height="24" width="24">
                                         <use height="24" width="24" xlink:href="./img/icons.svg#insta-stroke"></use>
+                                    </svg>
+                                </a>
+                                <a href="https://www.youtube.com/user/FujifilmRu" target="_blank" class="hero__socials-link">
+                                    <svg height="30" width="31">
+                                        <use height="30" width="31" xlink:href="./img/icons.svg#yt-stroke"></use>
                                     </svg>
                                 </a>
                                 <a href="https://www.facebook.com/FujifilmRu/?fref=ts" target="_blank" class="hero__socials-link">
@@ -255,9 +243,9 @@
                                         <use height="25" width="15" xlink:href="./img/icons.svg#fb-stroke"></use>
                                     </svg>
                                 </a>
-                                <a href="https://www.youtube.com/user/FujifilmRu" target="_blank" class="hero__socials-link">
-                                    <svg height="30" width="31">
-                                        <use height="30" width="31" xlink:href="./img/icons.svg#yt-stroke"></use>
+                                <a href="https://vk.com/club23327078" target="_blank" class="hero__socials-link">
+                                    <svg height="20" width="30">
+                                        <use height="20" width="30" xlink:href="./img/icons.svg#vk-stroke"></use>
                                     </svg>
                                 </a>
                             </div>
@@ -367,7 +355,7 @@
                 </div>
             </div>
         </section>
-        <section class="slider">
+        <section id="top-slider" class="slider">
             <h2 class="section__title slider__title section__title_tac">ЦВЕТ ДЛЯ ФОТО И ВИДЕО</h2>
             <div class="slider__body js-slider-color">
                 <div class="swiper-wrapper">
@@ -699,7 +687,7 @@
                 </div>
             </div>
         </section>
-        <section id="whatsin" class="inside">
+        <section class="inside">
             <div class="container">
                 <div class="row__container">
                     <div class="row row_stretch">
@@ -722,7 +710,7 @@
                     </div>
                 </div>
             </div>
-            <div class="bg-container mt-70">
+            <div id="stab" class="bg-container mt-70">
                 <div class="container container_bigger">
                     <div class="row row_middle">
                         <div class="column">
