--- a/onlyfans/item.html
+++ b/onlyfans/item.html
@@ -21,7 +21,7 @@
                         </li>
                         <li class="nav__divide"></li>
                         <li class="nav__item">
-                            <a href="./index.html" class="nav__link active">Все сливы</a>
+                            <a href="./all-models.html" class="nav__link active">Все сливы</a>
                         </li>
                     </ul>
                 </nav>
