--- a/onlyfans/index.html
+++ b/onlyfans/index.html
@@ -21,7 +21,7 @@
                         </li>
                         <li class="nav__divide"></li>
                         <li class="nav__item">
-                            <a href="#" class="nav__link">Все сливы</a>
+                            <a href="./all-models.html" class="nav__link">Все сливы</a>
                         </li>
                     </ul>
                 </nav>
