--- a/fujifilm/index.html
+++ b/fujifilm/index.html
@@ -346,52 +346,31 @@
                 <div class="swiper-wrapper">
                     <div class="swiper-slide slider__item">
                         <span class="slider__author">Prasit Limpasatirakit ©</span>
-                        <img class="swiper-lazy slider__img" data-src="./img/slider-new/slide_13.jpg" data-srcset="./img/slider-new/slide_13.webp" alt="Фото в слайдере">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/slide_1.jpg" data-srcset="./img/rolls/slide_1.webp" alt="Фото в слайдере">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
                     </div>
                     <div class="swiper-slide slider__item">
-                        <span class="slider__author">Reiko Hagihara ©</span>
-                        <img class="swiper-lazy slider__img" data-src="./img/slider-new/slide_11.jpg" data-srcset="./img/slider-new/slide_11.webp" alt="Фото в слайдере">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/slide_2.jpg" data-srcset="./img/rolls/slide_2.webp" alt="Фото в слайдере">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
                     </div>
                     <div class="swiper-slide slider__item">
-                        <span class="slider__author">Jaja Samaniego ©</span>
-                        <img class="swiper-lazy slider__img" data-src="./img/slider-new/slide_12.jpg" data-srcset="./img/slider-new/slide_12.webp" alt="Фото в слайдере">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/slide_3.jpg" data-srcset="./img/rolls/slide_3.webp" alt="Фото в слайдере">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
                     </div>
                     <div class="swiper-slide slider__item">
-                        <span class="slider__author">Dinesh Boaz ©</span>
-                        <img class="swiper-lazy slider__img" data-src="./img/slider-new/slide_14.jpg" data-srcset="./img/slider-new/slide_14.webp" alt="Фото в слайдере">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/slide_4.jpg" data-srcset="./img/rolls/slide_4.webp" alt="Фото в слайдере">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
                     </div>
                     <div class="swiper-slide slider__item">
-                        <span class="slider__author">Heidi Browne ©</span>
-                        <img class="swiper-lazy slider__img" data-src="./img/slider-new/slide_15.jpg" data-srcset="./img/slider-new/slide_15.webp" alt="Фото в слайдере">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/slide_5.jpg" data-srcset="./img/rolls/slide_5.webp" alt="Фото в слайдере">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
                     </div>
                     <div class="swiper-slide slider__item">
-                        <span class="slider__author">Reiko Hagihara ©</span>
-                        <img class="swiper-lazy slider__img" data-src="./img/slider-new/slide_10.jpg" data-srcset="./img/slider-new/slide_10.webp" alt="Фото в слайдере">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/slide_6.jpg" data-srcset="./img/rolls/slide_6.webp" alt="Фото в слайдере">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
                     </div>
                     <div class="swiper-slide slider__item">
-                        <span class="slider__author">Karan Hutton ©</span>
-                        <img class="swiper-lazy slider__img" data-src="./img/slider-new/slide_16.jpg" data-srcset="./img/slider-new/slide_16.webp" alt="Фото в слайдере">
-                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
-                    </div>
-                    <div class="swiper-slide slider__item">
-                        <span class="slider__author">Guillem Calatrava ©</span>
-                        <img class="swiper-lazy slider__img" data-src="./img/slider-new/slide_4.jpg" data-srcset="./img/slider-new/slide_4.webp" alt="Фото в слайдере">
-                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
-                    </div>
-                    <div class="swiper-slide slider__item">
-                        <span class="slider__author">Wladimir Simitch ©</span>
-                        <img class="swiper-lazy slider__img" data-src="./img/slider-new/slide_6.jpg" data-srcset="./img/slider-new/slide_6.webp" alt="Фото в слайдере">
-                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
-                    </div>
-                    <div class="swiper-slide slider__item">
-                        <span class="slider__author">Luca Scarcella ©</span>
-                        <img class="swiper-lazy slider__img" data-src="./img/slider-new/slide_7.jpg" data-srcset="./img/slider-new/slide_7.webp" alt="Фото в слайдере">
+                        <img class="swiper-lazy slider__img" data-src="./img/rolls/slide_7.jpg" data-srcset="./img/rolls/slide_7.webp" alt="Фото в слайдере">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
                     </div>
                 </div>
@@ -408,7 +387,15 @@
                     </button>
                 </div>
                 <div class="slider__pagination-block">
-                    <h3 class="slider__name">Classic Neg</h3>
+                    <div class="slider__names">
+                        <h3 class="slider__name">Classic Neg</h3>
+                        <h3 class="slider__name">Color Chrome</h3>
+                        <h3 class="slider__name">Velvia</h3>
+                        <h3 class="slider__name">ETERNA Bleach Bypass</h3>
+                        <h3 class="slider__name">Provia</h3>
+                        <h3 class="slider__name">Acros</h3>
+                        <h3 class="slider__name">Acros Black Image Tone</h3>
+                    </div>
                     <div class="swiper-pagination slider__pagination"></div>
                 </div>
             </div>
@@ -843,10 +830,10 @@
                 <h2 class="section__title section__title_tac">ОБЗОРЫ</h2>
                 <div class="reviews__body mt-50">
                     <div class="reviews__item review_outer">
-                        <a class="review__link" target="_blank" href="https://youtu.be/gQPM9IuNv8k"> 
+                        <a class="review__link" target="_blank" href="https://prophotos.ru/reviews/22304-fujifilm-x-s10-test"> 
                             <picture>
-                                <source srcset="https://i.ytimg.com/vi_webp/gQPM9IuNv8k/maxresdefault.webp" type="image/webp">
-                                <img class="review__media" src="https://i.ytimg.com/vi/gQPM9IuNv8k/maxresdefault.jpg" alt="Ембед видео">
+                                <source srcset="./img/outer-review_1.webp" type="image/webp">
+                                <img class="review__media" src="./img/outer-review_1.jpg" alt="Ембед видео">
                             </picture>
                         </a>
                         <button class="review__button" aria-label="Запустить видео">
@@ -912,8 +899,8 @@
                     <div class="reviews__item review_outer">
                         <a class="review__link" target="_blank" href="https://dphotoworld.net/publ/testy_i_obzory/obzor_fujifilm_x_s10/6-1-0-1174"> 
                             <picture>
-                                <source srcset="https://i.ytimg.com/vi_webp/gQPM9IuNv8k/maxresdefault.webp" type="image/webp">
-                                <img class="review__media" src="https://i.ytimg.com/vi/gQPM9IuNv8k/maxresdefault.jpg" alt="Ембед видео">
+                                <source srcset="./img/outer-review_2.webp" type="image/webp">
+                                <img class="review__media" src="./img/outer-review_2.jpg" alt="Ембед видео">
                             </picture>
                         </a>
                         <button class="review__button" aria-label="Запустить видео">
@@ -970,6 +957,36 @@
                     <div class="swiper-slide slider__item">
                         <span class="slider__author">Reiko Hagihara ©</span>
                         <img class="swiper-lazy slider__img" data-src="./img/slider-new/slide_9.jpg" data-srcset="./img/slider-new/slide_9.webp" alt="Фото в слайдере">
+                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
+                    </div>
+                    <div class="swiper-slide slider__item">
+                        <span class="slider__author">Reiko Hagihara ©</span>
+                        <img class="swiper-lazy slider__img" data-src="./img/slider-new/slide_11.jpg" data-srcset="./img/slider-new/slide_11.webp" alt="Фото в слайдере">
+                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
+                    </div>
+                    <div class="swiper-slide slider__item">
+                        <span class="slider__author">Jaja Samaniego ©</span>
+                        <img class="swiper-lazy slider__img" data-src="./img/slider-new/slide_12.jpg" data-srcset="./img/slider-new/slide_12.webp" alt="Фото в слайдере">
+                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
+                    </div>
+                    <div class="swiper-slide slider__item">
+                        <span class="slider__author">Dinesh Boaz ©</span>
+                        <img class="swiper-lazy slider__img" data-src="./img/slider-new/slide_14.jpg" data-srcset="./img/slider-new/slide_14.webp" alt="Фото в слайдере">
+                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
+                    </div>
+                    <div class="swiper-slide slider__item">
+                        <span class="slider__author">Heidi Browne ©</span>
+                        <img class="swiper-lazy slider__img" data-src="./img/slider-new/slide_15.jpg" data-srcset="./img/slider-new/slide_15.webp" alt="Фото в слайдере">
+                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
+                    </div>
+                    <div class="swiper-slide slider__item">
+                        <span class="slider__author">Reiko Hagihara ©</span>
+                        <img class="swiper-lazy slider__img" data-src="./img/slider-new/slide_10.jpg" data-srcset="./img/slider-new/slide_10.webp" alt="Фото в слайдере">
+                        <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
+                    </div>
+                    <div class="swiper-slide slider__item">
+                        <span class="slider__author">Karan Hutton ©</span>
+                        <img class="swiper-lazy slider__img" data-src="./img/slider-new/slide_16.jpg" data-srcset="./img/slider-new/slide_16.webp" alt="Фото в слайдере">
                         <div class="swiper-lazy-preloader swiper-lazy-preloader-red"></div>
                     </div>
                 </div>
