desktop kalashnikov done

--- a/kalashnikov/index.html
+++ b/kalashnikov/index.html
@@ -303,8 +303,10 @@
                     <button type="submit" class="button form__button"><span>Отправить</span></button>
                 </form>
                 <div class="footer__service">
-                    
+                    <span class="footer__text footer__text_medium footer__text_red">Связаться с техподдержкой:</span>
+                    <button type="submit" class="button form__button"><span>Техподдержка</span></button>
                 </div>
+                <small class="footer__copyright footer__text footer__text_small footer__text_grey">Copyright © 2020  Все права защищены. Полное или частичное копирование материалов запрещено.</small>
             </div>
         </div>
     </footer>
